--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "font-awesome": "^4.7.0",
     "next": "9.3.5",
     "react": "16.13.1",
     "react-bootstrap": "^1.3.0",
