--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.2.1",
+    "@zeit/next-css": "^1.0.1",
+    "antd": "^4.5.1",
+    "chart.js": "^2.9.3",
     "next": "9.3.5",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-chartjs-2": "^2.10.0",
+    "react-dom": "16.13.1",
+    "styled-components": "^5.1.1"
   }
 }
