--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "@ant-design/icons": "^4.2.1",
     "@zeit/next-css": "^1.0.1",
     "antd": "^4.5.1",
+    "axios": "^0.19.2",
     "chart.js": "^2.9.3",
+    "moment": "^2.27.0",
     "next": "9.3.5",
     "react": "16.13.1",
     "react-chartjs-2": "^2.10.0",
