--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
     "@zeit/next-css": "^1.0.1",
     "antd": "^4.5.1",
     "axios": "^0.19.2",
-    "chart.js": "^2.9.3",
-    "moment": "^2.27.0",
     "bootstrap": "^4.5.0",
+    "chart.js": "^2.9.3",
     "font-awesome": "^4.7.0",
+    "moment": "^2.27.0",
     "next": "9.3.5",
     "react": "16.13.1",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "16.13.1",
     "react-chartjs-2": "^2.10.0",
+    "react-dom": "16.13.1",
+    "react-slidedown": "^2.4.5",
     "styled-components": "^5.1.1"
   }
 }
