--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "16.13.1",
     "react-chartjs-2": "^2.10.0",
     "react-dom": "16.13.1",
+    "react-wordcloud": "^1.2.7",
     "styled-components": "^5.1.1"
   }
 }
